@@ -41,10 +41,10 @@
 # Below are what we set by default.  May only work with SUN JVM.
 # For more on why as well as other possible settings,
 # see http://hbase.apache.org/book.html#performance
-export HBASE_OPTS="$HBASE_OPTS -XX:+UseConcMarkSweepGC"
 export JAVA_HOME=/usr/lib/jvm/jdk1.8.0_371
-export HBASE_CLASSPATH=/usr/local/hbase/conf 
-#export HBASE_MANAGES_ZK=true
+export HBASE_CLASSPATH=/usr/local/hbase/conf
+export HBASE_MANAGES_ZK=false
+export HBASE_DISABLE_HADOOP_CLASSPATH_LOOKUP="true"
 # Uncomment one of the below three options to enable java garbage collection logging for the server-side processes.
 
 # This enables basic gc logging to the .out file.
